
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_5__ TYPE_2__ ;
typedef struct TYPE_4__ TYPE_1__ ;


struct TYPE_5__ {TYPE_1__* priv_data; } ;
struct TYPE_4__ {int * canvas; int * dither; int * display; int window_title; } ;
typedef TYPE_1__ CACAContext ;
typedef TYPE_2__ AVFormatContext ;


 int av_freep (int *) ;
 int caca_free_canvas (int *) ;
 int caca_free_display (int *) ;
 int caca_free_dither (int *) ;

__attribute__((used)) static int caca_write_trailer(AVFormatContext *s)
{
    CACAContext *c = s->priv_data;

    av_freep(&c->window_title);

    if (c->display) {
        caca_free_display(c->display);
        c->display = ((void*)0);
    }
    if (c->dither) {
        caca_free_dither(c->dither);
        c->dither = ((void*)0);
    }
    if (c->canvas) {
        caca_free_canvas(c->canvas);
        c->canvas = ((void*)0);
    }
    return 0;
}
